--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./css/index.css" />
 
     <title>Frontend Mentor | Profile card component</title>
 
@@ -26,10 +27,56 @@
     </style>
   </head>
   <body>
-    Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
+    <div class="background">
+      <img
+        class="background__top"
+        src="./images/bg-pattern-top.svg"
+        alt="background top"
+      />
+      <img
+        src="./images/bg-pattern-bottom.svg"
+        alt="bakcground bottom"
+        class="background__bottom"
+      />
+    </div>
+
+    <div class="card">
+      <img
+        src="./images/bg-pattern-card.svg"
+        alt="Card Cover"
+        class="card__cover"
+      />
+      <img
+        src="./images/image-victor.jpg"
+        alt="Victor Crest"
+        class="card__avatar"
+      />
+      <div class="card__user">
+        <div>
+          <h1 class="card__username">Victor Crest</h1>
+          <h2 class="card__userage">26</h2>
+        </div>
+        <p class="card__userplace">London</p>
+      </div>
+
+      <div class="card__info">
+        <div class="card__infosection">
+          <h3 class="value">80K</h3>
+          <p class="type">Followers</p>
+        </div>
+        <div class="card__infosection">
+          <h3 class="value">803K</h3>
+          <p class="type">Likes</p>
+        </div>
+        <div class="card__infosection">
+          <h3 class="value">1.4K</h3>
+          <p class="type">Photos</p>
+        </div>
+      </div>
+    </div>
+
     <div class="attribution">
       Challenge by
-
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Puneet Pareenja</a>.
